# ros2_playground

./: README.md
demo_nodes_secure/: CMakeLists.txt  README.md  package.xml
demo_nodes_secure/launch/action/: fibonacci.launch.py
demo_nodes_secure/launch/topics/: talker_listener_secure.launch.py  talker_listener_secure_best_effort.launch.py
demo_nodes_secure/src/policies/: listener_best_effort.xml  sample_policy.xml
demo_nodes_secure_cpp/: CMakeLists.txt  README.md  package.xml
demo_nodes_secure_cpp/launch/topics/: talker_listener_secure.launch.py  talker_listener_secure_best_effort.launch.py
demo_nodes_secure_cpp/src/policies/: sample_policy.xml
demo_plugin_component/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
demo_plugin_component/cfg/: params.yaml
demo_plugin_component/include/demo_plugin_component/: message_writer.h  message_writer_derived.h  message_writter.h  message_writter_derived.h  talker_crtp_base.h
demo_plugin_component/launch/: talker.launch.py
demo_plugin_component/src/: crtp_talker_node.cpp  message_writer_derived_export.cpp  message_writter_derived_export.cpp  talker_node.cpp
